[package]
name = "untitled5"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.29"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.2"  # Use the latest version


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
